--- a/templates/data/post.pug
+++ b/templates/data/post.pug
@@ -5,12 +5,12 @@
 			"headline": data.post.title,
 			"datePublished": data.post._.publishedDate.format('YYYY-MM-DDTHH:mm'),
 			"author": {
-				"@type": "MedicalBusiness",
+				"@type": "Organization",
 				"@id": process.env.DOMAIN_NAME + "#organization",
 				"name": process.env.WEBSITE_NAME
 			},
 			"publisher": {
-				"@type": "MedicalBusiness",
+				"@type": "Organization",
 				"@id": process.env.DOMAIN_NAME + "#organization",
 				"name": process.env.WEBSITE_NAME
 			}
