--- a/templates/data/medical-business.pug
+++ b/templates/data/medical-business.pug
@@ -12,7 +12,7 @@ include event
 		"image": process.env.DOMAIN_NAME + "/images/leprojet.png",
 		"logo": {
 			"@type": "ImageObject",
-			process.env.DOMAIN_NAME + "/images/sprite/logo.svg"
+			"url": process.env.DOMAIN_NAME + "/images/sprite/logo.svg"
 		},
 		"priceRange": "$"
 	}
