--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -42,7 +42,7 @@ html(lang="fr")
 				.nav-pannel
 					.root-link
 						a(href="/")
-							include ../../public/images/sprite/logo.svg
+							include ../../public/images/logo.svg
 							span= process.env.WEBSITE_NAME
 					nav.links-container(role="navigation")
 						ul
@@ -81,7 +81,7 @@ html(lang="fr")
 					.footer-heading-wrapper
 						h1 Nous contacter
 				.logo-wrapper
-					include ../../public/images/sprite/logo.svg
+					include ../../public/images/logo.svg
 				.address
 					h2 Adresse
 					if data.contact.address.street1
