--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -9,7 +9,7 @@ block head
 block content
 	header.jumbotron(role="banner")
 		h1
-			include ../../public/images/sprite/logo.svg
+			include ../../public/images/logo.svg
 			span La Bienvenue
 		aside.text
 			h2= data.accueil.heading
