--- a/templates/data/medical-business.pug
+++ b/templates/data/medical-business.pug
@@ -10,10 +10,7 @@ include event
 		"name": process.env.WEBSITE_NAME,
 		"url": process.env.DOMAIN_NAME,
 		"image": process.env.DOMAIN_NAME + "/images/leprojet.png",
-		"logo": {
-			"@type": "ImageObject",
-			"url": process.env.DOMAIN_NAME + "/images/sprite/logo.svg"
-		},
+		"logo": process.env.DOMAIN_NAME + "/images/logo.png",
 		"priceRange": "$"
 	}
 
