--- a/templates/views/contact.pug
+++ b/templates/views/contact.pug
@@ -12,7 +12,7 @@ block content
 		h1 Nous contacter
 		.contact-wrapper
 			.contact-card
-				include ../../public/images/sprite/logo.svg
+				include ../../public/images/logo.svg
 				p.address
 					if data.contact.address.street1
 						span= data.contact.address.street1
