--- a/public/styles/site/popup.less
+++ b/public/styles/site/popup.less
@@ -4,23 +4,12 @@
 	display: none;
 	background: white;
 	position: fixed;
+	height: 100%;
+	width: 100%;
 	top: 0;
 	left: 0;
-	right: 0;
-	bottom: 0;
 	overflow: hidden;
 	background: @color1-e;
-
-	// .popup-overlay {
-	// 	background: red;
-	// 	opacity: 0.3;
-	// 	position: fixed;
-	// 	top: 0;
-	// 	left: 0;
-	// 	right: 0;
-	// 	bottom: 0;
-	// 	cursor: pointer;
-	// }
 
 	.popup-content {
 		position: absolute;
