--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -21,6 +21,9 @@ html(lang="fr")
 		link(href="/styles/site.css", rel="stylesheet")
 		//- link(href="/styles/print.min.css" type="text/css" rel="stylesheet" media="print")
 
+		script
+			| window.noZensmooth = true;
+
 		//- Include template-specific stylesheets by extending the css block
 		block css
 
@@ -29,7 +32,8 @@ html(lang="fr")
 
 	//- HTML BODY
 	body
-		include ../mixins/grid
+		if process.env.NODE_ENV !== production
+			include ../mixins/grid
 
 		//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
 		//- ... or completely change this header to suit your design.
@@ -77,49 +81,50 @@ html(lang="fr")
 		//- FOOTER
 		if !contactPage
 			footer
-				if indexPage
-					.footer-heading-wrapper
-						h1 Nous contacter
-				.logo-wrapper
-					include ../../public/images/logo.svg
-				.address
-					h2 Adresse
-					if data.contact.address.street1
-						span= data.contact.address.street1
-					if data.contact.address.postcode || data.contact.address.suburb
-						span
-							if data.contact.address.postcode
-								| #{data.contact.address.postcode} 
-							if data.contact.address.suburb
-								| #{data.contact.address.suburb}
-					if data.contact.address.country
-						span= data.contact.address.country
-				.contact
-					h2 Contact
-					if data.contact.phone
-						span T / #{data.contact.phone} 
-					if data.contact.mobilePhone
-						span T / #{data.contact.mobilePhone} 
-					if data.contact.email
-						a(href='mailto:'+data.contact.email)= data.contact.email
-				.follow
-					h2 Suivez-nous
-					if data.contact.socials.facebook
-						a(href=data.contact.socials.facebook target="_blank") facebook
-					if data.contact.socials.twitter
-						a(href=data.contact.socials.twitter target="_blank") twitter
-					if data.contact.socials.linkedin
-						a(href=data.contact.socials.linkedin target="_blank") linkedin
-					form.custom-form.newsletter(method='post' action='/newsletter' onsubmit='return submitNewsletter(this);' autocomplete='on')
-						h3 newsletter
-						input.action(type='hidden', name='action', value='newsletter')
-						.field
-							label(for='email') Email
-							input(type='email', name='email', placeholder='Entrez votre email ici')
-						button(type='submit')
-							span.button-text Envoyer
-							span.loader
-						.result-box
+				address
+					if indexPage
+						.footer-heading-wrapper
+							h1 Nous contacter
+					.logo-wrapper
+						include ../../public/images/logo.svg
+					.address
+						h2 Adresse
+						if data.contact.address.street1
+							span= data.contact.address.street1
+						if data.contact.address.postcode || data.contact.address.suburb
+							span
+								if data.contact.address.postcode
+									| #{data.contact.address.postcode} 
+								if data.contact.address.suburb
+									| #{data.contact.address.suburb}
+						if data.contact.address.country
+							span= data.contact.address.country
+					.contact
+						h2 Contact
+						if data.contact.phone
+							span T / #{data.contact.phone} 
+						if data.contact.mobilePhone
+							span T / #{data.contact.mobilePhone} 
+						if data.contact.email
+							a(href='mailto:'+data.contact.email)= data.contact.email
+					.follow
+						h2 Suivez-nous
+						if data.contact.socials.facebook
+							a(href=data.contact.socials.facebook target="_blank") facebook
+						if data.contact.socials.twitter
+							a(href=data.contact.socials.twitter target="_blank") twitter
+						if data.contact.socials.linkedin
+							a(href=data.contact.socials.linkedin target="_blank") linkedin
+						form.custom-form.newsletter(method='post' action='/newsletter' onsubmit='return submitNewsletter(this);' autocomplete='on')
+							h3 newsletter
+							input.action(type='hidden', name='action', value='newsletter')
+							.field
+								label(for='email') Email
+								input(type='email', name='email', placeholder='Entrez votre email ici')
+							button(type='submit')
+								span.button-text Envoyer
+								span.loader
+							.result-box
 				div.admin-login
 					if user
 						if user.canAccessKeystone
