--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -411,7 +411,7 @@
 			pointer-events: none;
 			transform: scale(0.5);
 			opacity: 0;
-			width: 0%;
+			width: 0;
 			margin: 0;
 			padding: 0;
 
