--- a/templates/mixins/sharer.pug
+++ b/templates/mixins/sharer.pug
@@ -3,4 +3,4 @@ mixin sharer(url)
 		p Partager
 		a.facebook(href="https://www.facebook.com/sharer/sharer.php?u="+url target="_blank" title="sur Facebook") 
 		a.twitter(href="https://twitter.com/intent/tweet?url="+url target="_blank" title="sur Twitter")
-		button(onclick="window.print();return false;") Imprimer le flyer
+		//- button(onclick="window.print();return false;") Imprimer le flyer
