--- a/templates/views/lesoin.pug
+++ b/templates/views/lesoin.pug
@@ -5,7 +5,6 @@ block variables
 		var employees = [];
 		for(var y = 0; y < data.professionals.length; y++) {
 			for(var x = 0; x < data.professionals[y].length; x++) {
-				console.log(data.professionals[y][x]);
 				employees.push(data.professionals[y][x]);
 			}
 		}
@@ -15,7 +14,7 @@ block head
 
 block content
 	section.lesoin
-		header
+		header.header
 			.heading-wrapper
 				h1 Le soin
 			if data.lesoin.intro
@@ -23,42 +22,46 @@ block content
 		if data.professionals.length
 			section.professionals
 				h2 Les professionnels du soin
-				each proRow in data.professionals
-					.professionalsRow
-						each pro in proRow
-							.professional
-								if pro.photo.exists
-									img(src=pro._.photo.fill(400,400) alt="Photo de " + pro.name.full)
-								span.name
-									span= pro.name.first
-									| 
-									span= pro.name.last
-								if pro.job
-									span.job= pro.job
-								if pro.description
-									p.description= pro.description
-								if pro.contact.email
-									a.email(href='mailto:'+pro.contact.email)= pro.contact.email
-								if pro.contact.phone
-									span.phone= pro.contact.phone
-								if pro.contact.website
-									a.website(href=pro.contact.website target="_blank" rel="bookmark") Site internet
-								if pro.socials.facebook || pro.socials.twitter || pro.socials.linkedin
-									.socials
-										if pro.socials.facebook
-											a.link(href=pro.socials.facebook target="_blank" rel="bookmark") Facebook
-										if pro.socials.twitter
-											a.link(href=pro.socials.twitter target="_blank" rel="bookmark") Twitter
-										if pro.socials.linkedin
-											a.link(href=pro.socials.linkedin target="_blank" rel="bookmark") Linkedin
-								table.schedule
-									thead
-										caption Horaires
-									each day in pro.timetable
-										//http://schema.org/LocalBusiness
-										tr
-											th= day.label
-											if day.value
-												td(itemprop="openingHours" datetime=day.schema)= day.value
-											else
-												td Fermé
+				- var i = 1;
+				each pro in data.professionals
+					.professional
+						if pro.photo.exists
+							img(src=pro._.photo.fill(400,400) alt="Photo de " + pro.name.full)
+						span.name
+							span= pro.name.first
+							| 
+							span= pro.name.last
+						if pro.job
+							span.job= pro.job
+						if pro.description
+							p.description= pro.description
+						if pro.contact.email
+							a.email(href='mailto:'+pro.contact.email)= pro.contact.email
+						if pro.contact.phone
+							span.phone= pro.contact.phone
+						if pro.contact.website
+							a.website(href=pro.contact.website target="_blank" rel="bookmark") Site internet
+						if pro.socials.facebook || pro.socials.twitter || pro.socials.linkedin
+							.socials
+								if pro.socials.facebook
+									a.link(href=pro.socials.facebook target="_blank" rel="bookmark") Facebook
+								if pro.socials.twitter
+									a.link(href=pro.socials.twitter target="_blank" rel="bookmark") Twitter
+								if pro.socials.linkedin
+									a.link(href=pro.socials.linkedin target="_blank" rel="bookmark") Linkedin
+						table.schedule
+							thead
+								caption Horaires
+							each day in pro.timetable
+								//http://schema.org/LocalBusiness
+								tr
+									th= day.label
+									if day.value
+										td(itemprop="openingHours" datetime=day.schema)= day.value
+									else
+										td Fermé
+					if i % 2 === 0
+						.spacer-2
+					if i % 3 === 0
+						.spacer-3
+					- i++;
