Mobile version up to date

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -14,11 +14,11 @@ body {
 	margin: 0;
 	font-family: @current-text;
 	-webkit-overflow-scrolling: touch;
-	min-width: 300px;
-	max-width: 1700px;
+	min-width: @min-width;
+	max-width: @max-width;
 }
 
-@media screen and (max-width: 1800px), screen and (max-device-width: 1800px) {
+@media screen and (max-width: @max-width), screen and (max-device-width: @max-width) {
 	body {
 		margin: 0 auto;
 	}
