--- a/public/styles/site/lesoin.less
+++ b/public/styles/site/lesoin.less
@@ -131,6 +131,7 @@ section.lesoin {
 			clear: both;
 			width: calc(8 * @column ~'-' @gutter);
 			padding: 0;
+			font-size: 16px;
 		}
 
 		section.professionals {
