--- a/public/styles/site/nav.less
+++ b/public/styles/site/nav.less
@@ -523,6 +523,14 @@ header.nav.interactive.closing {
 	}
 }
 
+@media screen and (max-width: 700px), screen and (max-device-width: 700px) {
+	header.nav.interactive {
+		.toggle-nav {
+			left: @margin-mobile;
+		}
+	}
+}
+
 @media screen and (max-width: 550px), screen and (max-device-width: 550px) {
 	header.nav.interactive {
 		.nav-pannel {
