--- a/public/styles/site/articles.less
+++ b/public/styles/site/articles.less
@@ -167,3 +167,216 @@ section.articles {
 		}
 	}
 }
+
+@media screen and (max-width: 1000px), screen and (max-device-width: 1000px) {
+	section.articles {
+		.intro-text {
+			float: left;
+			clear: both;
+			width: calc(8 * @column ~'-' @gutter);
+			padding: 0;
+			font-size: 16px;
+			margin-bottom: 80px;
+		}
+
+		.heading-wrapper {
+			width: calc(7 * @column ~'+' @margin - @gutter);
+		}
+	}
+}
+
+@media screen and (max-width: 900px), screen and (max-device-width: 900px) {
+	.posts-grid {
+		.post {
+			&.carré {
+				width: 33.333333vw;
+				height: 33.333333vw;
+			}
+
+			&.portrait {
+				width: 33.333333vw;
+				height: 49.999999vw;
+			}
+
+			&.paysage {
+				width: 66.666666vw;
+				height: 16.666666vw;
+			}
+
+			.post-title {
+				font-size: 5vw;
+				&.few-words {
+					font-size: 8vw;
+				}
+			}
+		}
+	}	
+}
+
+@media screen and (max-width: 800px), screen and (max-device-width: 800px) {
+	section.articles {
+		margin-bottom: 100px;
+
+		.heading-wrapper {
+			width: calc(8 * @column ~'+' @margin - @gutter);
+		}
+	}
+
+	.posts-grid {
+		.more-soon {
+			bottom: -260px;
+			right: 10%;
+		}
+	}
+}
+
+@media screen and (max-width: 700px), screen and (max-device-width: 700px) {
+	.posts-grid {
+		.post {
+			&.carré {
+				width: 50vw;
+				height: 50vw;
+			}
+
+			&.portrait {
+				width: 50vw;
+				height: 75vw;
+			}
+
+			&.paysage {
+				width: 100vw;
+				height: 25vw;
+			}
+
+			.post-title {
+				font-size: 7vw;
+				&.few-words {
+					font-size: 10vw;
+				}
+			}
+		}
+
+		.more-soon {
+			bottom: -260px;
+			right: 15%;
+		}
+	}	
+}
+
+@media screen and (max-width: 600px), screen and (max-device-width: 600px) {
+	section.articles {
+		margin-bottom: 330px;
+		padding: 0 @margin-mobile - @gutter / 2;
+
+		.heading-wrapper {
+			width: 100%;
+			margin-left: -@margin-mobile + @gutter / 2;
+
+			h1 {
+				padding: 40px 30px 50px 30px;
+				font-size: 60px;
+				width: calc(100% ~'-' 2 * @margin-mobile);
+				margin-left: @margin-mobile;
+			}
+		}
+	}
+
+	.posts-grid {
+		margin-left: -(@margin-mobile - @gutter / 2);
+		width: calc(100% ~'+' 2 * (@margin-mobile - @gutter / 2));
+
+		.more-soon {
+			right: 50%;
+			margin-right: -140px;
+		}
+	}
+
+}
+
+@media screen and (max-width: 450px), screen and (max-device-width: 450px) {
+	section.articles {
+		.heading-wrapper {
+			padding: 18px 0 30px 0;
+			h1 {
+				font-size: 45px;
+				padding: 47px 30px 50px 30px;
+			}
+		}
+	}
+
+	.posts-grid {
+		.more-soon {
+			width: 220px;
+			height: 150px;
+			right: 50%;
+			margin-right: -110px;
+		}
+	}
+}
+
+@media screen and (max-width: 400px), screen and (max-device-width: 400px) {
+	section.articles {
+		.heading-wrapper {
+			padding: 30px 0 30px 0;
+			h1 {
+				font-size: 35px;
+				padding: 35px 30px 50px 30px;
+				line-height: 32px;
+			}
+		}
+	}
+
+	.posts-grid {
+		.post {
+			&.carré {
+				width: 100vw;
+				height: 50vw;
+			}
+
+			&.portrait {
+				width: 100vw;
+				height: 75vw;
+			}
+
+			&.paysage {
+				width: 100vw;
+				height: 50vw;
+			}
+
+			.post-title {
+				font-size: 10vw;
+				&.few-words {
+					font-size: 15vw;
+				}
+			}
+		}
+	}	
+}
+
+@media screen and (max-width: @min-width), screen and (max-device-width: @min-width) {
+	.posts-grid {
+		.post {
+			&.carré {
+				width: @min-width;
+				height: @min-width / 2;
+			}
+
+			&.portrait {
+				width: @min-width;
+				height: @min-width * 0.75;
+			}
+
+			&.paysage {
+				width: @min-width;
+				height: @min-width / 2;
+			}
+
+			.post-title {
+				font-size: 30px;
+				&.few-words {
+					font-size: 45px;
+				}
+			}
+		}
+	}	
+}
